--- a/Mobile/pubspec.yaml
+++ b/Mobile/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.5.0
   image_picker: ^1.2.0
+  image: ^4.5.4
+  path_provider: ^2.0.0
+  camera: ^0.10.0+1
+
+
 
 dev_dependencies:
   flutter_test:
