--- a/Web/package.json
+++ b/Web/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
-    "sass": "^1.94.0"
+    "sass": "^1.94.0",
+    "sweetalert2": "^11.26.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
