--- a/Mobile/android/app/src/main/AndroidManifest.xml
+++ b/Mobile/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="eye_1"
+        android:label="eye recognition"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
